--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Tasty Waves</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="cart-root"></div>
   </body>
 </html>
